k8s/media-services/sabnzbd/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media-services
  labels:
    app: sabnzbd
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: sabnzbd
